--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<!Doctype html>
+﻿<!Doctype html>
 <html lang="es"    >
 <head>
     <meta charset="utf-8" />
     <title>Plantilla</title>    
-    <link rel="stylesheet"  href="css.css" />
+    <link rel="stylesheet"  href="css.css" />qertertyertyey
    
     
 </head>
