--- a/index - copia.html
+++ b/index - copia.html
@@ -2,8 +2,8 @@
 <html lang="es"    >
 <head>
     <meta charset="utf-8" />
-    <title>Plantilla</title>    
-    <link rel="stylesheet"  href="css.css" />qertertyertyey
+    <title>Putilla</title>    
+    <link rel="stylesheet"  href="css.css" />
    
     
 </head>
